--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,76 @@
+/*body {*/
+/*    color: #113;*/
+/*}*/
+
 body {
-    color: #113;
+    /*background-image: linear-gradient(#4A148C, #E53935);*/
+    /*background-image: linear-gradient(90deg, #b9deed, #efefef);*/
+    /*background-image: linear-gradient(90deg, #cfecd0, #a0cea7, #9ec0db);*/
+    background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background-repeat: no-repeat;
+    color: #000;
+    overflow-x: hidden
+}
+
+.card {
+    border-radius: 5px;
+}
+
+.rating-box {
+    width: 100px;
+    height: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    color: black;
+    text-align: center;
+}
+
+.rating-label {
+    font-weight: bold
+}
+
+.rating-bar {
+    width: 200px;
+    padding: 8px;
+    border-radius: 5px;
+}
+
+.bar-container {
+    width: auto;
+    background-color: #f1f1f1;
+    text-align: center;
+    color: white;
+    border-radius: 20px;
+    cursor: pointer;
+    margin-bottom: 5px
+}
+
+.bar-5 {
+    height: 13px;
+    background-color: #FBC02D;
+    border-radius: 20px
+}
+
+.bar-4 {
+    height: 13px;
+    background-color: #FBC02D;
+    border-radius: 20px
+}
+
+.bar-3 {
+    height: 13px;
+    background-color: #FBC02D;
+    border-radius: 20px
+}
+
+.bar-2 {
+    height: 13px;
+    background-color: #FBC02D;
+    border-radius: 20px
+}
+
+.bar-1 {
+    height: 13px;
+    background-color: #FBC02D;
+    border-radius: 20px
 }
