--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -86,6 +86,11 @@ tr[data-user-active="false"] {
 
 .card-img-top {
     width: 100%;
-    height: 10vw;
+    height: 25vh;
     object-fit: cover;
+}
+
+.divCenter {
+    position: center;
+    margin: auto;
 }
